tailwind: got tailwind loaded and basic layout implementated

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website for Mike Kivikoski",
   "main": "index.js",
   "dependencies": {
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
     "node-sass": "^4.8.3",
