remove node-sass from package.json

--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "node-sass assets/sass/import.scss assets/css/main.css",
-    "watch:css": "nodemon -e scss -x \"npm run build:css\"",
-    "watch": "npm run watch:css",
+
     "serve": "http-server",
-    "start": "npm run serve & npm run watch"
+    "start": "npm run serve"
   },
   "repository": {
     "type": "git",
